# rag_demo

./: README.md  main.py  params.yaml  pyproject.toml  requirements.txt  templates.py
artifacts/faiss/: chunks.jsonl  index.faiss  index.pkl
artifacts/questions/: ques.json
rag_pipeline/: stage_01_populate_db.py  stage_02_query_data.py
utils/helpers/: get_population_func.py  langchain_imports.py
utils/llm/: get_llm_func.py  get_prompt_temp.py
