[project]
name = "rag-eval-toolkit-usage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "huggingface-hub[hf-xet]>=0.34.4",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "onnxruntime>=1.22.1",
    "psutil>=7.0.0",
    "pymupdf>=1.26.3",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]

[tool.ruff.lint]
ignore = ["F401"]